compile.log
> make
Scanning dependencies of target vdec_test
[  8%] Building CXX object CMakeFiles/vdec_test.dir/src/main.cpp.o
In file included from /home/flork/workspace/rtspPull/include/t507_vdec.h:5:0,
                 from /home/flork/workspace/rtspPull/include/live555.h:19,
                 from /home/flork/workspace/rtspPull/src/main.cpp:30:
/home/flork/workspace/rtspPull/include/sunxiMemInterface.h:12:0: warning: "SUCCESS" redefined
 #define SUCCESS 0
 
In file included from /home/flork/workspace/rtspPull/include/my_buffer.h:4:0,
                 from /home/flork/workspace/rtspPull/include/my_opengl.h:10,
                 from /home/flork/workspace/rtspPull/src/main.cpp:26:
/home/flork/workspace/rtspPull/include/common.h:29:0: note: this is the location of the previous definition
 #define SUCCESS         1
 
[ 16%] Building CXX object CMakeFiles/vdec_test.dir/src/t507_vdec.cpp.o
In file included from /home/flork/workspace/rtspPull/include/my_buffer.h:4:0,
                 from /home/flork/workspace/rtspPull/include/t507_vdec.h:6,
                 from /home/flork/workspace/rtspPull/src/t507_vdec.cpp:13:
/home/flork/workspace/rtspPull/include/common.h:29:0: warning: "SUCCESS" redefined
 #define SUCCESS         1
 
In file included from /home/flork/workspace/rtspPull/include/t507_vdec.h:5:0,
                 from /home/flork/workspace/rtspPull/src/t507_vdec.cpp:13:
/home/flork/workspace/rtspPull/include/sunxiMemInterface.h:12:0: note: this is the location of the previous definition
 #define SUCCESS 0
 
/home/flork/workspace/rtspPull/src/t507_vdec.cpp: In member function ‘bool t507_vdec_node::ensureIommuMapper()’:
/home/flork/workspace/rtspPull/src/t507_vdec.cpp:361:9: error: ‘CdcIonGetMemType’ was not declared in this scope
     if (CdcIonGetMemType() != MEMORY_IOMMU)
         ^~~~~~~~~~~~~~~~
/home/flork/workspace/rtspPull/src/t507_vdec.cpp:361:9: note: suggested alternative: ‘CdcVeGetDramType’
     if (CdcIonGetMemType() != MEMORY_IOMMU)
         ^~~~~~~~~~~~~~~~
         CdcVeGetDramType
/home/flork/workspace/rtspPull/src/t507_vdec.cpp:361:31: error: ‘MEMORY_IOMMU’ was not declared in this scope
     if (CdcIonGetMemType() != MEMORY_IOMMU)
                               ^~~~~~~~~~~~
/home/flork/workspace/rtspPull/src/t507_vdec.cpp:361:31: note: suggested alternative: ‘CONFIG_IOMMU’
     if (CdcIonGetMemType() != MEMORY_IOMMU)
                               ^~~~~~~~~~~~
                               CONFIG_IOMMU
/home/flork/workspace/rtspPull/src/t507_vdec.cpp: In member function ‘int t507_vdec_node::registerExternalBuffers()’:
/home/flork/workspace/rtspPull/src/t507_vdec.cpp:460:17: error: ‘CdcIonGetMemType’ was not declared in this scope
                 CdcIonGetMemType(),
                 ^~~~~~~~~~~~~~~~
/home/flork/workspace/rtspPull/src/t507_vdec.cpp:460:17: note: suggested alternative: ‘CdcVeGetDramType’
                 CdcIonGetMemType(),
                 ^~~~~~~~~~~~~~~~
                 CdcVeGetDramType
/home/flork/workspace/rtspPull/src/t507_vdec.cpp:502:78: error: ‘MEMORY_IOMMU’ was not declared in this scope
         if ((veOps == nullptr || veSelf == nullptr) && CdcIonGetMemType() == MEMORY_IOMMU)
                                                                              ^~~~~~~~~~~~
/home/flork/workspace/rtspPull/src/t507_vdec.cpp:502:78: note: suggested alternative: ‘CONFIG_IOMMU’
         if ((veOps == nullptr || veSelf == nullptr) && CdcIonGetMemType() == MEMORY_IOMMU)
                                                                              ^~~~~~~~~~~~
                                                                              CONFIG_IOMMU
/home/flork/workspace/rtspPull/src/t507_vdec.cpp:510:98: error: ‘MEMORY_IOMMU’ was not declared in this scope
         if (veOps != nullptr && veSelf != nullptr && out.mem.dmafd >= 0 && CdcIonGetMemType() == MEMORY_IOMMU)
                                                                                                  ^~~~~~~~~~~~
/home/flork/workspace/rtspPull/src/t507_vdec.cpp:510:98: note: suggested alternative: ‘CONFIG_IOMMU’
         if (veOps != nullptr && veSelf != nullptr && out.mem.dmafd >= 0 && CdcIonGetMemType() == MEMORY_IOMMU)
                                                                                                  ^~~~~~~~~~~~
                                                                                                  CONFIG_IOMMU
CMakeFiles/vdec_test.dir/build.make:198: recipe for target 'CMakeFiles/vdec_test.dir/src/t507_vdec.cpp.o' failed
make[2]: *** [CMakeFiles/vdec_test.dir/src/t507_vdec.cpp.o] Error 1
CMakeFiles/Makefile2:94: recipe for target 'CMakeFiles/vdec_test.dir/all' failed
make[1]: *** [CMakeFiles/vdec_test.dir/all] Error 2
Makefile:102: recipe for target 'all' failed
make: *** [all] Error 2